--- a/build.html
+++ b/build.html
@@ -59,7 +59,7 @@
                             请通过以下链接获取完整源码：
                         </p>
                         <div style="text-align: center;">
-                            <a href="https://mp.weixin.qq.com/" 
+                            <a href="https://mp.weixin.qq.com/s/bJvUw4yBEcsN9oR-OY9CAg" 
                                class="btn" 
                                target="_blank"
                                style="background: #2e7d32;">
@@ -78,7 +78,7 @@
                         <ul style="margin: 15px 0 0 0; padding-left: 20px; color: #856404;">
                             <li>项目来源：MSTOOL</li>
                             <li>原作者微信公众号：CTRLER</li>
-                            <li>GitHub：<a href="https://github.com/CTRLER/mstool" target="_blank" style="color: #856404; text-decoration: underline;">https://github.com/CTRLER/mstool</a></li>
+                            <li>GitHub：<a href="https://github.com/lbjlaq/mstool" target="_blank" style="color: #856404; text-decoration: underline;">https://github.com/CTRLER/mstool</a></li>
                         </ul>
                     </div>
 
